# barcelona_housing_ml

./: .gitignore  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
app/: Readme.py
app/pages/: 2_Prediction.py
artifacts/: features.json
notebooks/: 00_story_modeling.ipynb  01_eda.ipynb
notebooks/utils/: band_eval_utils.py  model_tradeoff.py  plots_eda.py
reports/: cv_summary.csv  metrics.json  model_comparison.csv
scripts/: evaluate.py  predicts.py  train.py
src/app_utils/: prediction_utils.py
src/bcn_housing/: __init__.py  config.py  data.py  evaluation.py  modeling.py  plots.py
